--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@900&display=swap');
 html, body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     width: 100vw;
     height: 100vh;
     background-color: #8E8E8E;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 #main {
+    position: relative;
     overflow: hidden;
-    overflow-x: hidden;
-    
 }
 a, li {
     cursor: pointer;
@@ -70,8 +68,9 @@ nav a {
     width: 100%;
 }
 #home {
+    position: relative;
     display: flex;
-    width: 100vw;
+    flex: 1;
     height: 100vh;
     background-color: #8E8E8E;
     align-items: center;
@@ -93,11 +92,8 @@ nav a {
     display: flex;
     flex: 1;
     width: 100vw;
-    max-width: 1144px;
     height: 100vh;
     background-color: #8E8E8E;
-    padding: 50px;
-    transform: translateX(20%);
     justify-content: center;
     align-items: center;
     /* align-items: flex-start;
@@ -105,33 +101,30 @@ nav a {
  */
 }
 h1{
-    font-size: 36px;
+    font-size: 28px;
     display: flex;
 }
-.about h3{
-    font-size: 28px;
-}
-.about p {
+/* .about h3{
     font-size: 24px;
 }
+.about p {
+    font-size: 18px;
+} */
 #services {
     display: flex;
     flex: 1;
     width: 100vw;
-    max-width: 1144px;
     height: 100vh;
     background-color: #8E8E8E;
-    padding: 50px;
-    transform: translateX(20%);
     justify-content: center;
     align-items: center;
 }
 
-.services h3{
-    font-size: 28px;
-}
-.services p {
+.content h3{
     font-size: 24px;
+}
+.content p {
+    font-size: 18px;
 }
 .footer {
             background-color:#333;
@@ -160,11 +153,8 @@ h1{
     flex-direction: column;
     flex: 1;
     width: 100vw;
-    max-width: 1144px;
     height: 80vh;
     background-color: transparent;
-    padding: 50px;
-    transform: translateX(16%);
     justify-content: center;
     align-items: center;
 }
@@ -175,6 +165,7 @@ form {
     max-width: 1144px;
     align-items: center;
     justify-content: space-between;
+    justify-items: center;
 }
 .formfields{
     display: flex;
@@ -216,7 +207,13 @@ button {
     bottom: 0;
     width: 100%;
 }
-
+ .content{
+    padding-left: 50px;
+    align-items: center;
+    justify-content: center;
+    max-width: 960px;
+    text-align: justify;
+ }
 
 
 
